--- a/index.html
+++ b/index.html
@@ -9,8 +9,12 @@
 </head>
 <body>
     <!-- Navigation -->
-    <nav>
-        <ul>
+    
+       <nav class="navbar">
+    <div class="nav-container">
+        <div class="logo">BM</div>
+
+        <ul class="nav-menu" id="navMenu">
             <li><a href="#home">Home</a></li>
             <li><a href="#about">About</a></li>
             <li><a href="#languages">Languages</a></li>
@@ -18,7 +22,15 @@
             <li><a href="#journey">Journey</a></li>
             <li><a href="#contact">Contact</a></li>
         </ul>
-    </nav>
+
+        <div class="hamburger" id="hamburger">
+            <span></span>
+            <span></span>
+            <span></span>
+        </div>
+    </div>
+</nav>
+
 
     <!-- Hero Section -->
     <header id="home">
@@ -491,4 +503,5 @@
 
     <script src="dim.js"></script>
 </body>
+
 </html>
